@@ -409,9 +409,10 @@ int Fl_Input::handle(int event) {
       // user double or triple clicked to select word or whole text
       copy(0);
     }
-    // For output widgets, do the callback so the app knows the user
-    // did something with the mouse...
-    if (readonly()) do_callback();
+
+    // perform the RELEASE callback
+    if (when() & FL_WHEN_RELEASE)
+      maybe_do_callback();
     return 1;
 
   case FL_DND_ENTER:
